--- a/JEST -2G/package.json
+++ b/JEST -2G/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "test": "jest",
+    "watch-test":"jest --watch",
     "build": "parcel build index.html",
     "start": "parcel index.html"
   },
